# home-nix

./: .gitignore  .gitmodules  LICENSE  Makefile  README  README.md  default.nix  flake.nix  home.nix  lib.nix  main.nix  packages.nix  shell.nix  utils.nix  xinitrc
config/core/: default.nix
config/core/env/: default.nix
config/core/shells/: default.nix  p10k-tty.zsh  p10k.zsh
config/data/accounting/: default.nix  hledger.el
config/data/calendar/: config.el  default.nix
config/data/feeds/: config.el  default.nix
config/data/mail/: afew.nix
config/data/papers/: default.nix
config/data/wiki/: default.nix  roam.el
config/interface/x11/: rofi.nix  (+1 more)
flk/: flake.nix
flk/hosts/: default.nix  tungdil.nix
flk/local/: locale.nix
flk/profiles/: list.nix
home/: README.md  home.nix  main.nix  nixpkgs-config.nix  oracle-packages.nix  oracle.nix  packages.nix
hosts/: default.nix  duna.nix  dwarfmaster.nix  helzvog.nix  labrad.nix  sharindlar.nix  tungdil.nix  vraccas.nix
lib/: default.nix  lua.nix  mustache.nix  utils.nix
modules/accounting/: default.nix
modules/clipboard/: default.nix
modules/deluge/: default.nix
modules/dunst/: default.nix
modules/firefox/: default.nix
modules/git/: default.nix
modules/gtk/: default.nix
modules/home-manager/: default.nix
modules/mail-client/: default.nix
modules/mail-server/: default.nix
modules/matrix/: secret.nix
modules/music/: default.nix
modules/network/: default.nix
modules/nextcloud/: default.nix
modules/nix/: default.nix
modules/photo-server/: default.nix  pixelfed-env.nix  redis.nix
modules/reading-server/: default.nix
modules/rofi/: default.nix  packages.nix
modules/sound/: default.nix
modules/st/: default.nix
modules/vim/: default.nix  plugins.nix  vimrc
modules/xinit/: default.nix  xinitrc
modules/xmonad/: default.nix
modules/zsh/: default.nix  zshrc
nixops/: hardware.nix  services.nix
nixops/modules/: general-misc.nix  openssh-server.nix  personal-misc.nix  personal-packages.nix  xserver.nix
overlays/base16/: default.nix  schemes.nix  update-schemes.jl
overlays/firn/: default.nix  firn.nix
overlays/why3/: default.nix
pkgs/: default.nix  exposed.nix
pkgs/hie/: default.nix
pkgs/nix-doom-emacs/: default.nix
pkgs/nixpkgs/: .gitignore  Makefile  default.nix
profiles/core/: default.nix
profiles/hm/languages/cpp/cmake/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/: CMakeLists.txt
programs/firefox/: default.nix
programs/git/: default.nix
programs/home-manager/: default.nix
programs/zsh/: default.nix
tests/: default.nix
tests/boot-tungdil/: default.nix
tests/boot-vraccas/: default.nix
tests/trivial/: default.nix
user/core/: default.nix
user/languages/cpp/cmake/{{cookiecutter.project_name}}/: CMakeLists.txt  README.md  flake.nix
user/languages/cpp/cmake/{{cookiecutter.project_name}}/test_{{cookiecutter.project_name}}/: CMakeLists.txt
user/languages/cpp/cmake/{{cookiecutter.project_name}}/test_{{cookiecutter.project_name}}/src/: test_{{cookiecutter.project_name}}.cpp
user/languages/cpp/cmake/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/src/: {{cookiecutter.project_name}}.cpp
users/: default.nix  luc-common.nix  luc-persist.nix  luc-rpi4.nix  luc-server.nix  luc.nix
users/luc/: default.nix
users/luc-common/: default.nix
users/luc-server/: default.nix
xmonad/: xmobarrc  xmonad.hs
(+509 files in other folders)
